# tennis-stats-analyzer

./: .gitignore  LICENSE  README.md  examples.py  main.py  mkdocs.yml  pyproject.toml
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  FINAL_CHECKLIST.txt  GUIDA_UTENTE.md  PROJECT_SUMMARY.py  QUICK_REFERENCE.py  START_HERE.md  index.md
src/tennis_analyzer/: __init__.py  analyzer.py  cleaner.py  config.py  downloader.py  logger.py  visualizer.py
