[project]
name = "tennis-stats-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Data Analyst", email = "analyst@example.com"}
]
keywords = ["tennis", "atp", "data-analysis", "pandas", "visualization"]

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
]
